--- a/app/src/main/res/layout/activity_learning_type.xml
+++ b/app/src/main/res/layout/activity_learning_type.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_gravity="center"
+    android:background="#FFE5E5"
     android:padding="16dp">
 
     <ImageButton
