--- a/app/src/main/res/layout/activity_listening_practice.xml
+++ b/app/src/main/res/layout/activity_listening_practice.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_gravity="center"
+    android:orientation="vertical"
+   >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:orientation="vertical">
 
         <ImageButton
             android:id="@+id/btnBack"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/back"
-            android:layout_marginEnd="16dp"/>
+            android:src="@drawable/back" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/videoCard"
@@ -28,7 +30,8 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_gravity="center">
 
                 <VideoView
                     android:id="@+id/videoView"
@@ -40,20 +43,20 @@
                     android:id="@+id/tvStartVideo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Nhấn để bắt đầu"
-                    android:gravity="center"
-                    android:textColor="@color/White"
                     android:background="@color/Black"
+                    android:gravity="center"
+                    android:text="Nhấn để bắt đầu"
+                    android:textColor="@color/White"
                     android:textSize="25dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <View
                     android:id="@+id/subtitleMask"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentBottom="true"
                     android:background="@color/White"
-                    android:visibility="invisible"
-                    android:layout_alignParentBottom="true" />
+                    android:visibility="invisible" />
             </RelativeLayout>
         </com.google.android.material.card.MaterialCardView>
 
@@ -62,12 +65,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Ẩn gợi ý"
-            app:iconGravity="textStart"
-            app:iconPadding="8dp"
             android:backgroundTint="@color/Red"
+            android:text="Ẩn gợi ý"
             android:textColor="@color/white"
             app:cornerRadius="8dp" />
+        <!--            app:iconGravity="textStart"-->
+        <!--            app:iconPadding="8dp"-->
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputAnswerLayout"
@@ -75,31 +79,31 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:boxBackgroundMode="outline"
-            app:boxCornerRadiusTopStart="8dp"
-            app:boxCornerRadiusTopEnd="8dp"
-            app:boxCornerRadiusBottomStart="8dp"
             app:boxCornerRadiusBottomEnd="8dp"
-            >
+            app:boxCornerRadiusBottomStart="8dp"
+            app:boxCornerRadiusTopEnd="8dp"
+            app:boxCornerRadiusTopStart="8dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/userInputAnswer"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:hint="Nhập ở đây"
+                android:layout_height="279dp"
+                android:background="@android:color/transparent"
                 android:gravity="top|start"
-                android:inputType="textMultiLine"
-                android:background="@android:color/transparent" />
+                android:hint="Nhập ở đây"
+                android:inputType="textMultiLine" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnContinue"
-            android:layout_width="match_parent"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/Red"
             android:text="Tiếp tục"
             android:textColor="@android:color/white"
-            android:backgroundTint="@color/Red"
             app:cornerRadius="8dp" />
 
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
