--- a/app/src/main/res/layout/activity_speaking_practice.xml
+++ b/app/src/main/res/layout/activity_speaking_practice.xml
@@ -7,57 +7,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_gravity="center"
     android:padding="16dp"
     tools:context=".View.SpeakingPracticeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
         <ImageButton
             android:id="@+id/btnBack"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@drawable/back"
-            android:layout_marginEnd="16dp"/>
+            />
 
         <TextView
             android:id="@+id/tvTimer"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="05:00"
-            android:textSize="24sp"
+            android:textSize="20dp"
+            android:paddingRight="30dp"
             android:textStyle="bold"
             android:gravity="center"/>
     </LinearLayout>
 
-    <Space
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="450dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvQuestion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Introducing yourself"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:padding="16dp"/>
+        <TextView
+            android:id="@+id/tvQuestion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Introducing yourself"
+            android:textAlignment="center"
+            android:textSize="20sp" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        <ListView
+            android:id="@+id/lstQuestions"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+        </ListView>
+    </LinearLayout>
+
     <ImageButton
         android:id="@+id/btnMicro"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/micro"
         android:backgroundTint="@color/white"
         android:layout_gravity="center"
@@ -65,11 +74,11 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnComplete"
-        android:layout_width="match_parent"
+        android:layout_width="178dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/Red"
         android:text="Hoàn thành"
         android:textColor="@android:color/white"
-        android:backgroundTint="@color/Red"
         app:cornerRadius="8dp" />
 </LinearLayout>
